src/components/Center/Center.scss
@import "../../index.scss";

@keyframes moveInBottom {
  0% {
    opacity: 0;
    transform: translateY(10rem);
  }

  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

@keyframes moveInLeft {
  0% {
    opacity: 0;
    transform: translateX(-10rem);
  }

  100% {
    opacity: 1;
    transform: translate(0);
  }
}

.Center {
  position: relative;

  &__background {
    background-image: linear-gradient(
        to right bottom,
        rgba(255, 255, 255, 0.3),
        rgba(0, 0, 0, 0.9)
      ),
      url("https://live.staticflickr.com/65535/50630796327_6bf58e00a9_k.jpg");
    // width: 100%;
    height: 90vh;
    background-repeat: no-repeat;
    background-size: cover;

    @media screen and (min-width: 375px) and (max-width: 700px) {
    }
  }

  &__logo-box {
    display: flex;
    position: absolute;
    height: 200px;
    width: 100%;
    margin-left: 20px;
    animation: moveInLeft 2s ease-out;

    @media screen and (max-width: 1130px) {
      justify-content: center;
      margin-left: 0;
      height: 150px;
    }

    @media screen and (max-width: 700px) {
      height: 100px;
    }
  }

  &__banner-box {
    position: relative;
    top: 16%;
    display: flex;
    justify-content: center;
  }

  &__banner-text {
    font-size: 4rem;
    animation: moveInBottom 2s ease-out;

    @media screen and (min-width: 375px) and (max-width: 700px) {
      font-size: 1.8rem;
    }
  }

  &__arrow-box {
    opacity: 0;

    @media only screen and (min-width: 375px) and (max-width: 700px) {
      opacity: 1;
    }
  }
}

